--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
       
 	  var buildUrl = "Build";
 	  var config = {
-        dataUrl: buildUrl + "/myWeb.data.br",
-        frameworkUrl: buildUrl + "/myWeb.framework.js.br",
-			codeUrl: buildUrl + "/myWeb.wasm.br",
+        dataUrl: buildUrl + "/myWeb.data",
+        frameworkUrl: buildUrl + "/myWeb.framework.js",
+			codeUrl: buildUrl + "/myWeb.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "TCUant",
         productName: "WebARTCU",
