--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 		<imagetarget id='reel' src='targets/reel.png'></imagetarget>
 		<imagetarget id='rmn' src='targets/rmn.png'></imagetarget>
 		<imagetarget id='image5' src='targets/圖片5.jpg'></imagetarget>
+		<imagetarget id='S__24846585' src='targets/S__24846585.jpg'></imagetarget>
 
     <video id="webcam-video" muted autoplay playsinline style="width:1px;position:absolute"></video>
     <canvas id="video-canvas" style="width:100%; height:100%; object-fit:cover; position:absolute"></canvas>
